Move keyserver service from new to new branch

--- a/_layout/default.html
+++ b/_layout/default.html
@@ -61,10 +61,8 @@
 					</a>
 					<div class="nav-collapse">
 						<ul class="nav">
-						{% for href, id, caption in navigation_bar %}
-						  <li{% if id == active_page %} class="active"{% endif
-						  %}><a href="{{ href|e }}">{{ caption|e }}</a></li>
-						{% endfor %}
+							<li><a href="//connectical.com/services"><span
+									class="icon-chevron-left"></span> Go back to services</a></li>
 						</ul>
 
 					</div>
