--- a/css/main.css
+++ b/css/main.css
@@ -1,296 +1,2 @@
-/*! Hint.css - v1.2.1 - 2013-03-24
- * * http://kushagragour.in/lab/hint/
- * * Copyright (c) 2013 Kushagra Gour; Licensed MIT */
-.hint,[data-hint]{position:relative;display:inline-block}.hint:before,.hint:after,[data-hint]:before,[data-hint]:after{position:absolute;visibility:hidden;opacity:0;z-index:1000000;pointer-events:none;-webkit-transition:.3s ease;-moz-transition:.3s ease;transition:.3s ease}.hint:hover:before,.hint:hover:after,[data-hint]:hover:before,[data-hint]:hover:after{visibility:visible;opacity:1}.hint:before,[data-hint]:before{content:'';position:absolute;background:transparent;border:6px solid transparent;z-index:1000001}.hint:after,[data-hint]:after{content:attr(data-hint);background:#383838;color:#fff;text-shadow:0 -1px 0 black;padding:8px 10px;font-size:12px;line-height:12px;white-space:nowrap;box-shadow:4px 4px 8px rgba(0,0,0,.3)}.hint--top:before{border-top-color:#383838}.hint--bottom:before{border-bottom-color:#383838}.hint--left:before{border-left-color:#383838}.hint--right:before{border-right-color:#383838}.hint--top:before{margin-bottom:-12px}.hint--top:after{margin-left:-18px}.hint--top:before,.hint--top:after{bottom:100%;left:50%}.hint--top:hover:before,.hint--top:hover:after{-webkit-transform:translateY(-8px);-moz-transform:translateY(-8px);transform:translateY(-8px)}.hint--bottom:before{margin-top:-12px}.hint--bottom:after{margin-left:-18px}.hint--bottom:before,.hint--bottom:after{top:100%;left:50%}.hint--bottom:hover:before,.hint--bottom:hover:after{-webkit-transform:translateY(8px);-moz-transform:translateY(8px);transform:translateY(8px)}.hint--right:before{margin-left:-12px;margin-bottom:-6px}.hint--right:after{margin-bottom:-14px}.hint--right:before,.hint--right:after{left:100%;bottom:50%}.hint--right:hover:before,.hint--right:hover:after{-webkit-transform:translateX(8px);-moz-transform:translateX(8px);transform:translateX(8px)}.hint--left:before{margin-right:-12px;margin-bottom:-6px}.hint--left:after{margin-bottom:-14px}.hint--left:before,.hint--left:after{right:100%;bottom:50%}.hint--left:hover:before,.hint--left:hover:after{-webkit-transform:translateX(-8px);-moz-transform:translateX(-8px);transform:translateX(-8px)}.hint--error:after{background-color:#b34e4d;text-shadow:0 -1px 0 #5a2626}.hint--error.hint--top:before{border-top-color:#b34e4d}.hint--error.hint--bottom:before{border-bottom-color:#b34e4d}.hint--error.hint--left:before{border-left-color:#b34e4d}.hint--error.hint--right:before{border-right-color:#b34e4d}.hint--warning:after{background-color:#c09854;text-shadow:0 -1px 0 #6d5228}.hint--warning.hint--top:before{border-top-color:#c09854}.hint--warning.hint--bottom:before{border-bottom-color:#c09854}.hint--warning.hint--left:before{border-left-color:#c09854}.hint--warning.hint--right:before{border-right-color:#c09854}.hint--info:after{background-color:#3986ac;text-shadow:0 -1px 0 #193c4c}.hint--info.hint--top:before{border-top-color:#3986ac}.hint--info.hint--bottom:before{border-bottom-color:#3986ac}.hint--info.hint--left:before{border-left-color:#3986ac}.hint--info.hint--right:before{border-right-color:#3986ac}.hint--success:after{background-color:#458746;text-shadow:0 -1px 0 #1a331a}.hint--success.hint--top:before{border-top-color:#458746}.hint--success.hint--bottom:before{border-bottom-color:#458746}.hint--success.hint--left:before{border-left-color:#458746}.hint--success.hint--right:before{border-right-color:#458746}.hint--always:after,.hint--always:before{opacity:1;visibility:visible}.hint--always.hint--top:after,.hint--always.hint--top:before{-webkit-transform:translateY(-8px);-moz-transform:translateY(-8px);transform:translateY(-8px)}.hint--always.hint--bottom:after,.hint--always.hint--bottom:before{-webkit-transform:translateY(8px);-moz-transform:translateY(8px);transform:translateY(8px)}.hint--always.hint--left:after,.hint--always.hint--left:before{-webkit-transform:translateX(-8px);-moz-transform:translateX(-8px);transform:translateX(-8px)}.hint--always.hint--right:after,.hint--always.hint--right:before{-webkit-transform:translateX(8px);-moz-transform:translateX(8px);transform:translateX(8px)}.hint--rounded:after{border-radius:4px}
-
-/*footer {
-	position:absolute;
-	bottom:0;
-	width:100%;
-	height:50px;
-	margin-bottom:0;
-	padding-bottom:0;
-}*/
-footer.container.navbar-fixed-top {
-	top:auto;
-	bottom: 0;
-	width:100%;
-}
-
-
-footer .icon { text-align:right; }
-footer .icon a {
-	font-size:130%;
-	padding-right:0.6em;
-}
-
-.brand {
-	background:transparent url("../img/logo.png") 0 12px no-repeat;
-	height:18px;
-	width:200px;
-}
-
-.title {
-	font-size:240%;
-	font-family:'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-weight:100;
-}
-
-.lead p.title { line-height:55px; margin-bottom:20px; }
-
-.pic {
-	width:333px;
-	height:200px;
-}
-
-.pic_header {
-	background-image:url("../img/sub_header.jpg");
-}
-
-.asset {
-	height:150px;
-	width:200px;
-}
-
-.clearline {
-	margin-bottom:130px;
-	clear:both;
-}
-
-.clearmin {
-	margin-bottom:40px;
-	clear:both;
-}
-body {
-	font-size:11pt;
-	margin-bottom:0;
-	padding-bottom:0;
-}
-
-html {
-	background:#eee!important;
-}
-
-#footer-extra { background:#eee; }
-
-#footer-extra a{ color:#999;}
-
-.navbar ul.nav a { font-size:small!important;}
-
-.vspace { margin-top:2%; }
-
-.area { text-transform:capitalize; }
-
-.hero-unit .ac { margin-bottom:4em; }
-
-dl.elements dd { margin-bottom:1em !important; }
-.homepage .span4 span.icon { padding-right:0.5em; }
-.product span.icon { padding-left:0.5em; font-size:80%; color:#888;}
-
-.product { margin-bottom:10px; }
-.product h3 a { color:#333; font-size:larger; font-weight:400; }
-
-dl { font-size:90%; margin-left:1em;}
-dt { color:#555; }
-dd { color:#777; }
-
-.nav-pills { font-size:80%!important;}
-.nav-pills li a { text-transform:capitalize; line-height:0.5em;margin-right:1em;}
-.nav-pills .active a,
-.nav-pills .active a:hover {
-	    background-color: #000;
-	}
-.nav-pills a {
-	background-color:#555;
-	color:#fff;
-}
-.nav-pills a:hover {
-	background-color:#000!important;
-	color:#fff;
-}
-.post .entry-body h2 {
-	color:#333;
-	line-height:1.2em;
-}
-
-.post span.icon-quote-left:before {
-	content:'“';
-	font-family:Palatino, sans-serif;
-}
-.post span.icon-quote-left {
-	float:left;
-	font-size:800%;
-	color:#888;
-	padding:0.2em;
-
-}
-
-.post-tweet .entry-body p {
-	font-size:170%;
-	margin-top:1em;
-	padding-left:100px;
-	line-height:1.4em;
-}
-
-.post-ghactivity dl {
-	font-size:160%;
-}
-
-.post-ghactivity dt a {
-	color:#333;
-	font-weight:400;
-}
-.post-ghactivity dd {
-	margin-bottom:1em;
-}
-
-a { color:#000; }
-
-#portfolio-items .span6 { margin-bottom:1em; }
-
-.product {
-	border-radius:5px;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-}
-
-.product .pinner { width:95%; margin:0 auto; }
-.product.odd {
-	background:#ededed;
-}
-
-.member-networks a { font-size:90%!important; }
-
-h1.alt {
-	text-shadow: black 0.1em 0.1em 0.2em;
-	font-weight:100!important;
-	font-size:60px!important;
-}
-
-.jumbotron {
-  position: relative;
-  padding: 40px 0;
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
-  min-height:200px;
-  background:#000;
-  -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-     -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-          box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-}
-.jumbotron h1 {
-  font-size: 60px;
-  font-weight: bold;
-  line-height: 1;
-}
-.jumbotron p {
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 1.25;
-  margin-bottom: 30px;
-}
-
-/* Link styles (used on .masthead-links as well) */
-.jumbotron a {
-  color: #fff;
-  color: rgba(255,255,255,.5);
-  -webkit-transition: all .2s ease-in-out;
-     -moz-transition: all .2s ease-in-out;
-          transition: all .2s ease-in-out;
-}
-.jumbotron a:hover {
-  color: #fff;
-  text-shadow: 0 0 10px rgba(255,255,255,.25);
-}
-
-/* Download button */
-.masthead .btn {
-  padding: 19px 24px;
-  font-size: 14px;
-  font-weight: 200;
-  color: #fff; /* redeclare to override the `.jumbotron a` */
-  border: 0;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
-     -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
-          box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
-  -webkit-transition: none;
-     -moz-transition: none;
-          transition: none;
-}
-.masthead .btn:hover {
-  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
-     -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
-          box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
-}
-.masthead .btn:active {
-  -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.1);
-     -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.1);
-          box-shadow: inset 0 2px 4px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.1);
-}
-
-
-/* Pattern overlay
-------------------------- */
-.jumbotron .container {
-  position: relative;
-  z-index: 2;
-}
-.jumbotron:after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: url(/img/services/keyserver.jpg) no-repeat 0 0;
-  background-size:cover;
-  opacity: .1;
-}
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1) {
-
-  .jumbotron:after {
-    background-size: 150px 150px;
-  }
-
-}
-
-/* Masthead (docs home)
-------------------------- */
-.masthead {
-  padding: 70px 0 60px;
-  margin-bottom: 0;
-  color: #fff;
-}
-.masthead h1 {
-  font-size: 80px;
-  line-height: 1;
-  font-weight:100;
-  margin-bottom:30px;
-}
-.masthead p {
-  color:#ccc;
-  font-size: 34px;
-  font-weight: 200;
-  line-height: 1.25;
-}
-
-/* Textual links in masthead */
-.masthead-links {
-  margin: 0;
-  list-style: none;
-}
-.masthead-links li {
-  display: inline;
-  padding: 0 10px;
-  color: rgba(255,255,255,.25);
-}
-
-
+.hint,[data-hint]{position:relative;display:inline-block}.hint:before,.hint:after,[data-hint]:before,[data-hint]:after{position:absolute;visibility:hidden;opacity:0;z-index:1000000;pointer-events:none;-webkit-transition:.3s ease;-moz-transition:.3s ease;transition:.3s ease}.hint:hover:before,.hint:hover:after,[data-hint]:hover:before,[data-hint]:hover:after{visibility:visible;opacity:1}.hint:before,[data-hint]:before{content:'';position:absolute;background:transparent;border:6px solid transparent;z-index:1000001}.hint:after,[data-hint]:after{content:attr(data-hint);background:#383838;color:#fff;text-shadow:0 -1px 0 black;padding:8px 10px;font-size:12px;line-height:12px;white-space:nowrap;box-shadow:4px 4px 8px rgba(0,0,0,.3)}.hint--top:before{border-top-color:#383838}.hint--bottom:before{border-bottom-color:#383838}.hint--left:before{border-left-color:#383838}.hint--right:before{border-right-color:#383838}.hint--top:before{margin-bottom:-12px}.hint--top:after{margin-left:-18px}.hint--top:before,.hint--top:after{bottom:100%;left:50%}.hint--top:hover:before,.hint--top:hover:after{-webkit-transform:translateY(-8px);-moz-transform:translateY(-8px);transform:translateY(-8px)}.hint--bottom:before{margin-top:-12px}.hint--bottom:after{margin-left:-18px}.hint--bottom:before,.hint--bottom:after{top:100%;left:50%}.hint--bottom:hover:before,.hint--bottom:hover:after{-webkit-transform:translateY(8px);-moz-transform:translateY(8px);transform:translateY(8px)}.hint--right:before{margin-left:-12px;margin-bottom:-6px}.hint--right:after{margin-bottom:-14px}.hint--right:before,.hint--right:after{left:100%;bottom:50%}.hint--right:hover:before,.hint--right:hover:after{-webkit-transform:translateX(8px);-moz-transform:translateX(8px);transform:translateX(8px)}.hint--left:before{margin-right:-12px;margin-bottom:-6px}.hint--left:after{margin-bottom:-14px}.hint--left:before,.hint--left:after{right:100%;bottom:50%}.hint--left:hover:before,.hint--left:hover:after{-webkit-transform:translateX(-8px);-moz-transform:translateX(-8px);transform:translateX(-8px)}.hint--error:after{background-color:#b34e4d;text-shadow:0 -1px 0 #5a2626}.hint--error.hint--top:before{border-top-color:#b34e4d}.hint--error.hint--bottom:before{border-bottom-color:#b34e4d}.hint--error.hint--left:before{border-left-color:#b34e4d}.hint--error.hint--right:before{border-right-color:#b34e4d}.hint--warning:after{background-color:#c09854;text-shadow:0 -1px 0 #6d5228}.hint--warning.hint--top:before{border-top-color:#c09854}.hint--warning.hint--bottom:before{border-bottom-color:#c09854}.hint--warning.hint--left:before{border-left-color:#c09854}.hint--warning.hint--right:before{border-right-color:#c09854}.hint--info:after{background-color:#3986ac;text-shadow:0 -1px 0 #193c4c}.hint--info.hint--top:before{border-top-color:#3986ac}.hint--info.hint--bottom:before{border-bottom-color:#3986ac}.hint--info.hint--left:before{border-left-color:#3986ac}.hint--info.hint--right:before{border-right-color:#3986ac}.hint--success:after{background-color:#458746;text-shadow:0 -1px 0 #1a331a}.hint--success.hint--top:before{border-top-color:#458746}.hint--success.hint--bottom:before{border-bottom-color:#458746}.hint--success.hint--left:before{border-left-color:#458746}.hint--success.hint--right:before{border-right-color:#458746}.hint--always:after,.hint--always:before{opacity:1;visibility:visible}.hint--always.hint--top:after,.hint--always.hint--top:before{-webkit-transform:translateY(-8px);-moz-transform:translateY(-8px);transform:translateY(-8px)}.hint--always.hint--bottom:after,.hint--always.hint--bottom:before{-webkit-transform:translateY(8px);-moz-transform:translateY(8px);transform:translateY(8px)}.hint--always.hint--left:after,.hint--always.hint--left:before{-webkit-transform:translateX(-8px);-moz-transform:translateX(-8px);transform:translateX(-8px)}.hint--always.hint--right:after,.hint--always.hint--right:before{-webkit-transform:translateX(8px);-moz-transform:translateX(8px);transform:translateX(8px)}.hint--rounded:after{border-radius:4px}footer.container.navbar-fixed-top{top:auto;bottom:0;width:100%}footer .icon{text-align:right}footer .icon a{font-size:130%;padding-right:0.6em}.brand{background:transparent url("../img/logo.png") 0 12px no-repeat;height:18px;width:200px}.title{font-size:240%;font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:100}.lead p.title{line-height:55px;margin-bottom:20px}.pic{width:333px;height:200px}.pic_header{background-image:url("../img/sub_header.jpg")}.asset{height:150px;width:200px}.clearline{margin-bottom:130px;clear:both}.clearmin{margin-bottom:40px;clear:both}body{font-size:11pt;margin-bottom:0;padding-bottom:0}html{background:#eee!important}#footer-extra{background:#eee}#footer-extra a{color:#999}.navbar ul.nav a{font-size:small!important}.vspace{margin-top:2%}.area{text-transform:capitalize}.hero-unit .ac{margin-bottom:4em}dl.elements dd{margin-bottom:1em !important}.homepage .span4 span.icon{padding-right:0.5em}.product span.icon{padding-left:0.5em;font-size:80%;color:#888}.product{margin-bottom:10px}.product h3 a{color:#333;font-size:larger;font-weight:400}dl{font-size:90%;margin-left:1em}dt{color:#555}dd{color:#777}.nav-pills{font-size:80%!important}.nav-pills li a{text-transform:capitalize;line-height:0.5em;margin-right:1em}.nav-pills .active a,.nav-pills .active a:hover{background-color:#000}.nav-pills a{background-color:#555;color:#fff}.nav-pills a:hover{background-color:#000!important;color:#fff}.post .entry-body h2{color:#333;line-height:1.2em}.post span.icon-quote-left:before{content:'“';font-family:Palatino,sans-serif}.post span.icon-quote-left{float:left;font-size:800%;color:#888;padding:0.2em}.post-tweet .entry-body p{font-size:170%;margin-top:1em;padding-left:100px;line-height:1.4em}.post-ghactivity dl{font-size:160%}.post-ghactivity dt a{color:#333;font-weight:400}.post-ghactivity dd{margin-bottom:1em}a{color:#000}#portfolio-items .span6{margin-bottom:1em}.product{border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}.product .pinner{width:95%;margin:0 auto}.product.odd{background:#ededed}.member-networks a{font-size:90%!important}h1.alt{text-shadow:black 0.1em 0.1em 0.2em;font-weight:100!important;font-size:60px!important}.jumbotron{position:relative;padding:40px 0;color:#fff;text-align:center;text-shadow:0 1px 3px rgba(0,0,0,.4),0 0 30px rgba(0,0,0,.075);min-height:200px;background:#000;-webkit-box-shadow:inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);-moz-box-shadow:inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);box-shadow:inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2)}.jumbotron h1{font-size:60px;font-weight:bold;line-height:1}.jumbotron p{font-size:14px;font-weight:300;line-height:1.25;margin-bottom:30px}.jumbotron a{color:#fff;color:rgba(255,255,255,.5);-webkit-transition:all .2s ease-in-out;-moz-transition:all .2s ease-in-out;transition:all .2s ease-in-out}.jumbotron a:hover{color:#fff;text-shadow:0 0 10px rgba(255,255,255,.25)}.masthead .btn{padding:19px 24px;font-size:14px;font-weight:200;color:#fff;border:0;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;-webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,.1),0 1px 5px rgba(0,0,0,.25);-moz-box-shadow:inset 0 1px 0 rgba(255,255,255,.1),0 1px 5px rgba(0,0,0,.25);box-shadow:inset 0 1px 0 rgba(255,255,255,.1),0 1px 5px rgba(0,0,0,.25);-webkit-transition:none;-moz-transition:none;transition:none}.masthead .btn:hover{-webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,.1),0 1px 5px rgba(0,0,0,.25);-moz-box-shadow:inset 0 1px 0 rgba(255,255,255,.1),0 1px 5px rgba(0,0,0,.25);box-shadow:inset 0 1px 0 rgba(255,255,255,.1),0 1px 5px rgba(0,0,0,.25)}.masthead .btn:active{-webkit-box-shadow:inset 0 2px 4px rgba(0,0,0,.1),0 1px 0 rgba(255,255,255,.1);-moz-box-shadow:inset 0 2px 4px rgba(0,0,0,.1),0 1px 0 rgba(255,255,255,.1);box-shadow:inset 0 2px 4px rgba(0,0,0,.1),0 1px 0 rgba(255,255,255,.1)}.jumbotron .container{position:relative;z-index:2}.jumbotron:after{content:'';display:block;position:absolute;top:0;right:0;bottom:0;left:0;background:url(/img/services/keyserver.jpg) no-repeat 0 0;background-size:cover;opacity:.1}@media
+only screen and (-webkit-min-device-pixel-ratio:2),only screen and ( min--moz-device-pixel-ratio:2),only screen and ( -o-min-device-pixel-ratio:2/1){.jumbotron:after{background-size:150px 150px}}.masthead{padding:70px 0 60px;margin-bottom:0;color:#fff}.masthead h1{font-size:80px;line-height:1;font-weight:100;margin-bottom:30px}.masthead p{color:#ccc;font-size:34px;font-weight:200;line-height:1.25}.masthead-links{margin:0;list-style:none}.masthead-links li{display:inline;padding:0 10px;color:rgba(255,255,255,.25)}
