Force non-ssl on go back services link

--- a/_layout/default.html
+++ b/_layout/default.html
@@ -61,7 +61,7 @@
 					</a>
 					<div class="nav-collapse">
 						<ul class="nav">
-							<li><a href="//connectical.com/services"><span
+							<li><a href="http://connectical.com/services"><span
 									class="icon-chevron-left"></span> Go back to services</a></li>
 						</ul>
 
