--- a/css/main.css
+++ b/css/main.css
@@ -293,4 +293,5 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
   color: rgba(255,255,255,.25);
 }
 
+.full-width { width:100%!important; }
 
