--- a/_layout/default.html
+++ b/_layout/default.html
@@ -56,7 +56,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</a>
-					<a class="brand" href="index.html">
+					<a class="brand" href="http://connectical.com">
 						<h1 class="hide">Connectical</h1>
 					</a>
 					<div class="nav-collapse">
