--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ footer .icon a {
 .lead p.title { line-height:55px; margin-bottom:20px; }
 
 .pic {
-	width:333px;
+/*	width:333px;*/
 	height:200px;
 }
 
@@ -66,6 +66,7 @@ html {
 
 .navbar ul.nav a { font-size:small!important;}
 
+.small {font-size:small;}
 .vspace { margin-top:2%; }
 
 .area { text-transform:capitalize; }
@@ -74,10 +75,16 @@ html {
 
 dl.elements dd { margin-bottom:1em !important; }
 .homepage .span4 span.icon { padding-right:0.5em; }
-.product span.icon { padding-left:0.5em; font-size:80%; color:#888;}
+h2 a:hover, h3 a:hover { text-decoration:none;color:#005580}
+.product span.icon { padding-left:0em; font-size:80%; color:#888;}
 
 .product { margin-bottom:10px; }
+.product p.small { font-size:smaller; margin-top:-1em; padding-top:0;}
+.product p.desc { font-style:italic; color:#888; }
 .product h3 a { color:#333; font-size:larger; font-weight:400; }
+.product h3 a:hover {color:#005580}
+.nav-tabs li a {text-transform:capitalize}
+
 
 dl { font-size:90%; margin-left:1em;}
 dt { color:#555; }
@@ -114,14 +121,7 @@ dd { color:#777; }
 
 }
 
-.post-tweet .entry-body p {
-	font-size:170%;
-	margin-top:1em;
-	padding-left:100px;
-	line-height:1.4em;
-}
-
-.post-ghactivity dl {
+/*.post-ghactivity dl {
 	font-size:160%;
 }
 
@@ -132,7 +132,7 @@ dd { color:#777; }
 .post-ghactivity dd {
 	margin-bottom:1em;
 }
-
+*/
 a { color:#000; }
 
 #portfolio-items .span6 { margin-bottom:1em; }
@@ -149,7 +149,6 @@ a { color:#000; }
 }
 
 .member-networks a { font-size:90%!important; }
-
 h1.alt {
 	text-shadow: black 0.1em 0.1em 0.2em;
 	font-weight:100!important;
@@ -292,3 +291,15 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 
 }
 .articles span {padding-right:0.4em;}
+
+.post_img { border:1px solid #ededed; padding:4px; overflow:hidden; height:200px !important; margin-bottom:6px;}
+
+#blog .nav-tabs li {border-bottom:none!important; padding-bottom:0!important;}
+#blog .tab-content {margin-top:1em;}
+
+.prod_code {
+	background:#ededed;
+	border-radius:5px; -moz-border-radius:5px; -webkit-border-radius:5px;
+	overflow:hidden;
+	white-space:pre-line;
+}
